# UnnamedEngine-Code

./: .editorconfig  .env.example  .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  docker-compose.db.yaml  docker-compose.dev.yaml  dockerfile.dev  makefile  package.json  pnpm-lock.yaml  turbo.json
.github/ISSUE_TEMPLATE/: 01-bug.yml  02-feature.yml  config.yml
.github/workflows/: ci.yaml
apps/backend/: Cargo.toml  package.json
apps/backend/.sqlx/: query-109b609f1d2c1a9ebc56380fd6f03c6e5669b76a6ff0699ec03b6201dbe4d0ef.json  query-5874837e1971ce1ad8e133a06b329d9ae3e11d8af9f0f63fb82d747b8d06af80.json  query-731407884979307e5899d9de893d8e10d98984a54cfa9eda3cc28b539b542447.json
apps/backend/migrations/: 20241120223321_init.sql
apps/backend/src/: lib.rs  main.rs
apps/backend/src/database/: mod.rs  postgres_database.rs  redis.rs
apps/backend/src/database/models/: ids.rs  mod.rs  user_item.rs
apps/backend/src/db/: mod.rs
apps/backend/src/db/account/: mod.rs  punishment.rs  punishment_translation.rs  status.rs  status_translation.rs  user.rs  user_punishment.rs
apps/backend/src/db/public/: i18n.rs  mod.rs
apps/backend/src/models/: mod.rs
apps/backend/src/models/account/: mod.rs  punishment.rs  punishment_translation.rs  status.rs  status_translation.rs  user.rs  user_punishment.rs
apps/backend/src/models/public/: i18n.rs  mod.rs
apps/backend/src/models/v1/: ids.rs  mod.rs  users.rs
apps/backend/src/routes/: index.rs  mod.rs  not_found.rs
apps/backend/src/routes/v1/: mod.rs  users.rs
apps/backend/src/tests/: mod.rs
apps/backend/src/tests/db_tests/: mod.rs
apps/backend/src/tests/db_tests/account_tests/: mod.rs  punishment_tests.rs  punishment_translation_tests.rs  status_tests.rs  status_translation_tests.rs  user_punishment_tests.rs  user_tests.rs
apps/backend/src/tests/db_tests/public_tests/: i18n_tests.rs  mod.rs
apps/client/: Cargo.toml  package.json
apps/client/src/: main.rs
