################################################################################
# WORKSPACE CONFIG
################################################################################
[workspace]
members = [
  "packages/engine",
  "apps/client",
  "apps/backend",
]
resolver = '2'
[workspace.package]
version = "0.0.1"
edition = "2021"

################################################################################
# GENERAL CONFIG
################################################################################
# Optimize for speed and reduce size on release builds
[profile.release]
# Strip expensive panic clean-up logic
panic = "abort"
# Compile crates one after another so the compiler can optimize better
codegen-units = 1
# Enable link to optimizations
lto = true
# Optimize for binary size
opt-level = "s"
# Remove debug symbols
strip = true

################################################################################
# TESTING
################################################################################
[workspace.dependencies.serial_test]
version = "3.1.1"

################################################################################
# ERROR
################################################################################
[workspace.dependencies.thiserror]
version = "2.0.11"

################################################################################
# ENVIRONMENT
################################################################################
[workspace.dependencies.dotenvy]
version = "0.15.7"

################################################################################
# LOGGING
################################################################################
[workspace.dependencies.log]
version = "0.4.25"

[workspace.dependencies.env_logger]
version = "0.11.6"

################################################################################
# CONCURRENCY
################################################################################
[workspace.dependencies.tokio]
version = "1.43.0"
features = [
  "full",
]

[workspace.dependencies.tokio-stream]
version = "0.1.17"

[workspace.dependencies.futures]
version = "0.3.31"

[workspace.dependencies.futures-timer]
version = "3.0.3"

[workspace.dependencies.futures-util]
version = "0.3.31"

[workspace.dependencies.async-trait]
version = "0.1.86"

[workspace.dependencies.crossbeam]
version = "0.8.4"

################################################################################
# ALGORITHM
################################################################################
[workspace.dependencies.rand]
version = "0.8.5"

[workspace.dependencies.rand_chacha]
version = "0.3.1"

[workspace.dependencies.strum]
version = "0.26.3"
features = [
  "derive",
]

[workspace.dependencies.serde]
version = "1.0.217"
features = [
  "derive",
]

[workspace.dependencies.serde_json]
version = "1.0.138"

################################################################################
# DATA
################################################################################
[workspace.dependencies.dashmap]
version = "6.1.0"

################################################################################
# TIME
################################################################################
[workspace.dependencies.chrono]
version = "0.4.39"
features = [
  "serde",
]

################################################################################
# STRING MANIPULATION
################################################################################
[workspace.dependencies.censor]
version = "0.3.0"

################################################################################
# DATABASE
################################################################################
[workspace.dependencies.sqlx]
version = "0.8.3"
features = [
  "runtime-tokio-rustls",
  "postgres",
  "chrono",
  "macros",
  "migrate",
  "json",
  ]

[workspace.dependencies.redis]
version = "0.27.6"
features = [
  "tokio-comp",
  "ahash",
  "r2d2",
]

[workspace.dependencies.deadpool-redis]
version = "0.18.0"

################################################################################
# HTTP
################################################################################
[workspace.dependencies.tower-http]
version = "0.6.2"
features = [
  "full",
]

[workspace.dependencies.axum]
version = "0.8.1"

################################################################################
# RENDERING
################################################################################
[workspace.dependencies.winit]
version = "0.30.8"
