[package]
name = "unen_backend"
version.workspace = true
edition.workspace = true

################################################################################
# DEPENDENCIES
################################################################################
[dependencies.anyhow]
workspace = true

[dependencies.dotenvy]
workspace = true

[dependencies.log]
workspace = true

[dependencies.env_logger]
workspace = true

[dependencies.serde]
workspace = true

[dependencies.tokio]
workspace = true

[dependencies.sqlx]
workspace = true

[dependencies.chrono]
workspace = true

[dependencies.uuid]
workspace = true
